syntax = "proto2";
package mvccpb;

message MetaItem {
    optional uint64 start_ts   = 1;
    optional uint64 commit_ts  = 2;
}

enum MetaLockType {
    ReadOnly  = 1;
    ReadWrite = 2;
}

message MetaLock {
    optional MetaLockType type        = 1;
    optional uint64       start_ts    = 2;
    optional bytes        primary_key = 3;
}

// Meta will be splitted into a list if it gets too big.
// An auto increased index will be assigned to each Meta node. The field `next`
// stores next Meta's index and next is 0 if no more Meta exists.
// Meta0 always contains the Lock(if any) and the latest versions.
message Meta {
    optional MetaLock lock  = 1;
    repeated MetaItem items = 2;
    optional uint64   next  = 3;
}
